# AI_Learning_Platform

./: Dockerfile  Readme.md  app.py  pyproject.toml  start.sh
Study/: chroma.sqlite3
pages/: explainer.py  flash_card.py  quiz.py  study_planner.py  summary.py  upload.py
utils/: chunking.py  embedding.py  llm.py  navigation.py  parser.py  pydantic.py  sidebarhider.py  vectordb.py
