[project]
name = "ai_learning_platform"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "chromadb>=1.1.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-text-splitters>=0.3.11",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "streamlit>=1.59.0",
    "reportlab>=5.0.0",
]
